# advent-2022

./: Cargo.toml  LICENSE  Readme.md  rust_config.json
benches/: bench.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
src/: computer.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  files.rs  lib.rs  main.rs  matrix.rs
src/day01/: Readme.md  mod.rs
src/day02/: Readme.md  mod.rs
src/day03/: Readme.md  mod.rs
src/day04/: Readme.md  mod.rs
src/day05/: Readme.md  mod.rs
src/day06/: Readme.md  mod.rs
src/day07/: Readme.md  mod.rs
src/day08/: Readme.md  mod.rs
src/day09/: Readme.md  mod.rs
src/day10/: Readme.md  mod.rs
src/day11/: Readme.md  mod.rs
src/day12/: Readme.md  mod.rs
src/day13/: Readme.md  mod.rs
src/day14/: Readme.md  mod.rs
src/day15/: Readme.md  mod.rs
