[package]
name = "advent-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
scan_fmt = "0.2.6"
thiserror = "1"
nom = "7"
take-until = "0.1.0"
rayon = "1.6.0"
serde_json = "1.0.89"

[dev-dependencies]
criterion = "0.3"
paste = "1.0"

[[bench]]
name = "bench"
harness = false
